--- a/final-project.rmd
+++ b/final-project.rmd
@@ -1,11 +1,7 @@
-# 2016 Presidential Campaign Contributions in Michigan 
-
-### by Liz Kalina
+2016 Presidential Campaign Contributions in Michigan 
 ========================================================
 
-## Preparations
-
-#### Load Packages
+## by Liz Kalina
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, packages}
 library(ggplot2)
@@ -19,8 +15,6 @@ library(data.table)
 library(grid)
 library(choroplethrZip)
 ```
-
-#### Load Datasets
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Load_the_Data}
 # Load the Contribution Data for Michigan
@@ -54,11 +48,14 @@ Michigander, I'm particularly interested in Michigan's current political climate
 ## Univariate Plots Section
 
 #### Dataset Characteristics
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Dataset_Characteristics}
 str(contrib)
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
+#### Unique Candidate Count
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, Unique_Candidates_Count}
 length(unique(contrib$cand_nm))
 ```
 
@@ -66,6 +63,7 @@ Our dataset consists of 18 variables, with 163,765 observations and 24 individua
 candidates that residents contributed to.
 
 #### Summary of Contributions to Each Candidates
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Contributions_by_Candidate}
 cands <- group_by(contrib, cand_nm)
 cand_summary <- summarize(cands, total = length(contb_receipt_amt),
@@ -83,6 +81,7 @@ Trump, Ted Cruz, Ben Carson) received fewer overall donations. The median
 donation per Republican candidate was roughly double that of the Democrats.
 
 #### Summary of Contributions by City
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Contributions_by_City}
 city <- group_by(contrib, contbr_city)
 city_summary <- summarize(city, total = length(contb_receipt_amt),
@@ -100,25 +99,30 @@ understanding of the wealth in these communities.
 ### Contribution Histograms
 
 #### Overall Distribution
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Overall_Histogram}
 ggplot(aes(x = contb_receipt_amt), data = contrib) + 
   geom_histogram(binwidth=5) +
   scale_x_sqrt(limits = c(0,2800))
 ```
+
 A vast majority of donations were less than $500, which shows that it's not 
 just rich donors making a majority of the contributions at least in the context 
 of individual donations.
 
 #### Contributions less than $100
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Less_100}
 ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt < 100)) + 
   geom_histogram(binwidth=10) +
   scale_x_continuous(limits = c(0, 100))
 ```
+
 For donations less than $100, you can notice peaks around $25, $50 and $75
 which aligns with suggested donation amounts incremented by $25.
 
 #### Contributions less than $400
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Less_400}
 ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt < 400)) + 
   geom_histogram(binwidth=50) +
@@ -126,6 +130,7 @@ ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt < 400
 ```
 
 #### Contributions greater than $1000
+
 ```{r echo=FALSE,message=FALSE, warning=FALSE,  Greater_1000}
 ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt > 1000)) + 
   geom_histogram(binwidth=750) +
@@ -134,12 +139,14 @@ ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt > 100
 ```
 
 According to the Federal Election Commission, individual contribution limits are:
+
 > $2,700 per election to a Federal candidate or the candidate's campaign committee. Notice that the limit applies separately to each election. Primaries, runoffs and general elections are considered separate elections.
 
 Since presidential campaigns have primaries and general elections, you can see 
 this reflected in the clustering of contribution counts at $2700 and $5400. 
 
 ### Candidates with the Most and Fewest Donations
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Most_Fewest_Donations}
 p1 <- ggplot(aes(y=total, x= cand_nm),data=head(ordered_cands, 5)) + 
         geom_bar(stat="identity") + 
@@ -154,6 +161,7 @@ p2 <- ggplot(aes(y=total, x= cand_nm),data=tail(ordered_cands, 5)) +
 
 grid.arrange(p1,p2,ncol=2)
 ```
+
 Above is a scale comparison of the candidates with the most and least 
 contributions. The total contribution difference is vast; top candidates can
 have more than half a million contributions, while four of the five smallest
@@ -161,13 +169,18 @@ candidates have less than 10 donations.
 
 ### Contributor Occupations and Employers
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, Employment_Stats}
+#### By Employer
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, Employmer_Stats}
 contrib %>% 
   group_by(contbr_employer) %>% 
   summarise(total = n()) %>%
   arrange(desc(total))
 ```
-```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
+
+#### By Occupation
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, Occupation_Stats}
 contrib %>% 
   group_by(contbr_occupation) %>% 
   summarise(total = n()) %>%
@@ -175,6 +188,7 @@ contrib %>%
 ```
 
 Employment Observations
+
 + Retired people are the most frequent contibutors by far
 + Employees of universities, automakers and hosptial systems are frequent contributors
 + There are a large number of contributions without employer and occupation info
@@ -182,14 +196,14 @@ Employment Observations
 
 ### Contribution Timing
 
-#### Add Date to Contributions
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Format_Date}
+## Add Date to Contributions
 contrib$contrib_date <- as.Date(contrib$contb_receipt_dt, '%d-%b-%y')
 contrib$contrib_month_year <- format(contrib$contrib_date, '%Y-%m')
 ```
 
-#### Contribution Counts by Date
 ```{r echo=FALSE, message=FALSE, warning=FALSE,  Count_by_Date}
+## Contribution Counts by Date
 contrib_by_month_year <- contrib %>% 
   group_by(contrib_month_year) %>% 
   summarise(total = n())
@@ -198,11 +212,13 @@ ggplot(data=contrib_by_month_year, aes(x=contrib_month_year, y=total, group=1)) 
   geom_line() +
   scale_x_discrete(breaks = unique(contrib_by_month_year$contrib_month_year)[seq(1,28,3)])
 ```
+
 From the plot above, you can see a gradual climb in donations during 2015 and a 
 steep climb from January to March 2016. There are three contribution peaks in 
 2016 — in March, July and October — each coinciding with an election event. There 
 was the Michigan Primary on March 8th, the Democratic and Republican national 
 conventions at the end of July and the general election on November 8th.
+
 
 ## Univariate Summary
 
@@ -218,25 +234,23 @@ small (less than $500). Other interesting things I noticed were that contributio
 amounts cluster around campaign maxs for larger donors and contributions peak 
 around key election events (like primaries, conventions or scandals).
 
-## Bivariate Plots Section
+# Bivariate Plots Section
 
-### Determine Contributor Gender and Candidate Political Party Affiliation
-
-#### Add Political Party Affiliation
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Add_Pol_Party}
+## Add Political Party Affiliation
 contrib <- merge(contrib, subset(cand_info[c("cand_id", "cand_pty_aff")]), by = "cand_id")
+## This political party data comes from the Federal Election Commission website.
 ```
-This political party data comes from the Federal Election Commission website.
 
-#### Split Full Name Column into First and Last Name
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Split_Name}
+## Split Full Name Column into First and Last Name
 contrib <- separate(contrib, contbr_nm, c("last_name", "first_name"), sep = ",", extra="merge", fill="right")
 contrib <- data.frame(lapply(contrib, trimws))
 contrib$clean_first_name <- gsub("([A-Za-z]+).*", "\\1", contrib$first_name)
 ```
 
-#### Add Gender to Contributors
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Add_Gender}
+## Add Gender to Contributors
 gender_lookup <- gender(c(unique(contrib$clean_first_name)))
 contrib <- left_join(contrib,gender_lookup,by = c("clean_first_name"="name"))
 
@@ -244,6 +258,8 @@ contrib_by_date_w_gender <- subset(contrib,proportion_male > 0.75 | proportion_f
   group_by(contrib_month_year, gender ) %>% 
   summarise(total = n())
 ```
+
+#### Add Gender to Contributors
 
 In order to determine each contributors gender, I used the 'gender' package in R,
 which encodes gender based on names and dates of birth using historical datasets.
@@ -258,6 +274,7 @@ ggplot(aes(x=cand_pty_aff),
   geom_histogram(stat='count',aes(fill=cand_pty_aff)) +
   facet_wrap(~gender)
 ```
+
 Both men and women in Michigan donate more to Democrats than Republicans;
 however, women are significantly more likely to donate Democratic than men.
 
@@ -271,6 +288,7 @@ ggplot(data=na.omit(subset(contrib_by_date_w_party,cand_pty_aff != " ")), aes(x=
   geom_line(aes(color = cand_pty_aff)) +
   scale_x_discrete(breaks = unique(contrib_by_month_year$contrib_month_year)[seq(1,28,3)])
 ```
+
 While Republicans actually donated more prior to 2016, the Democratic candidates
 received the overall majority of contributions. There were very few donations
 that were Libertarian or not marked for a particular party.
@@ -285,6 +303,7 @@ ggplot(data=subset(reps,total > 10), aes(x=contrib_month_year, y=total, group=ca
   geom_line(aes(color = cand_nm)) +
   scale_x_discrete(breaks = unique(contrib_by_month_year$contrib_month_year)[seq(1,28,3)])
 ```
+
 I think this plot is really interesting because it shows that Trump had almost 
 no financial contributions prior to the Republican Primary on March 8, 2016. The 
 leaders before the primary were Ben Carson and Ted Cruz. Trump's support 
@@ -296,16 +315,16 @@ small resurgence.
 
 In this section, I added political affiliation to candidates and gender to
 contributors, which allowed me to see the relationship between these features
-and campaign contributions. 
+and campaign contributions. There is a very strong correlation between female 
+gender and Democratic Party contributions. Other discoveries include how 
+cluttered the Republican race was prior to primaries, the lack of Trump support 
+prior to the Republican Primary and the strong Bernie support before the 
+Democratic National Convention.
 
-There is a very strong correlation between female gender and Democratic Party 
-contributions. Other discoveries include how cluttered the Republican 
-race was prior to primaries, the lack of Trump support prior to the Republican
-Primary and the strong Bernie support before the Democratic National Convention.
-
-## Multivariate Plots Section
+# Multivariate Plots Section
 
 #### Hillary vs. Trump over Time
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Hill_v_Trump}
 hill_v_trump <- subset(contrib, cand_nm %in% c('Clinton, Hillary Rodham','Trump, Donald J.') & !is.na(gender)) %>% 
   group_by(contrib_month_year, gender, cand_nm) %>% 
@@ -316,6 +335,7 @@ ggplot(data=hill_v_trump, aes(x=contrib_month_year, y=total, group=cand_nm)) +
   scale_x_discrete(breaks = unique(contrib_by_month_year$contrib_month_year)[seq(1,28,6)]) +
   facet_wrap(~gender)
 ```
+
 Donation trends to Hillary vs. Trump were uniform in shape, but not in scale
 across the genders and time. One key difference is that women always donated 
 more to Hillary than Trump, while men donated more to different candidates at 
@@ -325,6 +345,7 @@ actually made more donations to Hillary!
 ### Contribution Amount Distribution
 
 #### Top 10 Candidates
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Top_10}
 top_10 <- head(ordered_cands, 10)$cand_nm
 
@@ -333,12 +354,15 @@ ggplot(aes(x = cand_nm,y=contb_receipt_amt),
   geom_boxplot(aes(fill=cand_pty_aff)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
+
 Contribution Observations
+
 + The Republicans receive larger contributions than Democrats
 + Hillary has a low interquartile range, but still has many large contributions 
 + Jeb Bush has comically large contributions 
 
 #### By Political Party and Gender
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Party_v_Gender}
 contrib$contb_receipt_amt <- as.numeric(as.character(contrib$contb_receipt_amt))
 
@@ -346,6 +370,7 @@ ggplot(aes(x = cand_pty_aff,y=contb_receipt_amt), data=subset(contrib,!is.na(gen
       geom_boxplot(aes(fill=cand_pty_aff)) +
       facet_wrap(~gender)
 ```
+
 From this boxplot, you can see that the interquartile range for contribution 
 amounts is less than $100 across gender/political party and that Republican men 
 give the most per contribution.
@@ -361,6 +386,7 @@ contrib <- left_join(contrib,pop_density,by = c("contbr_zip"="Zip/ZCTA"))
 # Convert unemployment string (i.e. '8%') to numeric equivalent
 contrib$`Unemp. Rate` <- as.numeric(sub("%", "", contrib$`Unemp. Rate`))
 ```
+
 These two datasets were available on the Splitwise blog as downloads. According
 to the author, this data came from:
 
@@ -377,6 +403,7 @@ contrib$community_type <- cut(contrib$`Density Per Sq Mile`, breaks = c(0, 102, 
 ```
 
 Classification (People per Square Mile):
+
 + rural: < 102
 + suburban: 103 to 2,213
 + urban: > 2213
@@ -387,6 +414,7 @@ These cutoffs are based on an analysis presented on the FiveThirtyEight blog:
 
 
 #### Party Affiliation vs. Unemployment vs. Population Density
+
 ```{r echo=FALSE,message=FALSE, warning=FALSE,Multivariate_Plot}
 ggplot(aes(y=`Unemp. Rate`,x=`Density Per Sq Mile`), data=contrib) +
     geom_point(aes(color=cand_pty_aff),alpha = 1/100, size=3) +
@@ -403,6 +431,7 @@ density and higher unemployment while Republicans seem to live in areas with
 average unemployment and lower to moderate population density.
 
 #### Correlation: Population Density, Gender, Party Affiliation
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Correlation_One}
 feats = c('gender','cand_pty_aff')
 for (f in feats){
@@ -418,15 +447,16 @@ upper <- as.data.frame(upper)
 
 upper
 ```
+
 Correlation Observations
+
 + There are minor correlations between:
   + Democrats: higher population density, female
   + Republicans: lower population density, male
 
 
-### Group by Party and Zip Code
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Group_Party_Zip}
-## by zip code
+## Group by zip code
 group_by_zip <- contrib %>% 
   group_by(contbr_zip) %>% 
   summarise(total=n(),value=median(contb_receipt_amt))
@@ -434,7 +464,7 @@ group_by_zip <- contrib %>%
 setnames(group_by_zip, "contbr_zip", "region")
 group_by_zip$region <- as.character(group_by_zip$region)
 
-## by political party
+## Group by political party
 group_by_party <- contrib %>%
  group_by(contbr_zip,cand_pty_aff) %>% 
  summarise(n= n()) %>%
@@ -450,11 +480,8 @@ setnames(group_by_party, "contbr_zip", "region")
 group_by_party$region <- as.character(group_by_party$region)
 ```
 
-For the politcal party calculations, I select the dominant party (based on number
-of contributions) for each zip code and calculate the percentage of total 
-contributions that party receives.
+#### Donation Amounts vs. Zip Code
 
-#### Median Donation by Zip Code
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Donation_Map}
 don_amt <- subset(group_by_zip,total > 10 & !is.na(region), c('region','value'))
 
@@ -489,9 +516,8 @@ since the Democratic zip code have more total donations than the Republican zips
 
 In this section, I investigated support for Hillary vs. Trump over time, the
 size of campaign contributions for Democrats vs. Republicans as well as the 
-relationship between population density and unemployment to party affiliation.
-
-I observed that Democratic indicators include high population density and female 
+relationship between population density and unemployment to party affiliation. I 
+observed that Democratic indicators include high population density and female 
 gender, while Republican indicators are low population density and male gender. 
 Other observations include that Republicans (particularly Republican men) give 
 larger donations and although men favored Trump to Hillary, men actually made 
@@ -500,11 +526,12 @@ election.
 
 ------
 
-## Final Plots and Summary
+# Final Plots and Summary
 
 ## Plot One
 
 ### Hillary vs. Bernie
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Plot_One}
 hill_v_bern <- subset(contrib, cand_nm %in% c('Clinton, Hillary Rodham','Sanders, Bernard')) %>% 
   group_by(contrib_month_year, cand_nm) %>% 
@@ -519,6 +546,7 @@ ggplot(data=hill_v_bern, aes(x=contrib_month_year, y=total, group=cand_nm)) +
 ```
 
 ### Description One
+
 The above plot shows that Bernie Sanders actually had more support (based on 
 number of contributions) from 2015 to well after the Democratic Primary. It was 
 not until June 2016 that Hillary surpassed Bernie in number of donations, and not
@@ -529,6 +557,7 @@ supporters.
 ## Plot Two
 
 ### Party Leanings based on Zip Code
+
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Plot_Two}
 pty_ct <- subset(group_by_party,total > 5 & !is.na(region), c('region','value'))
@@ -541,10 +570,15 @@ zip_choropleth(pty_ct,
 ```
 
 ### Description Two
+
 On the above map, the darker zip codes code as Democratic and the lighter ones
 as Republican. As you can see, the Metro Detroit area and a majority of the coastal
 zip codes are Democratic, while the Republican patches are spread out around
 the state and tend to be landlocked.
+
+For the politcal party calculations, I select the dominant party (based on number
+of contributions) for each zip code and calculate the percentage of total 
+contributions that party receives.
 
 ## Plot Three
 
@@ -583,6 +617,7 @@ grid.arrange(p1,p2,ncol=2, top=textGrob("Hillary vs. Trump Support by Date/Gende
 ```
 
 ### Description Three
+
 Finally, I investigate how support for Hillary vs. Trump differed by gender and
 community type as a function of time. In general female voters favored Hillary,
 while male voters favored Trump. In terms of community type, city dwellers were
@@ -601,18 +636,22 @@ when they were more supportive of Trump.
 ### Features Examined
 
 contribution
+
 + amount
 + date
 
 candidate
+
 + political party
 
-contributor 
+contributor
+
 + employer
 + occupation
 + gender
 
 zip code
+
 + population density
 + community type
 + unemployment rate
